Travis: test pep8 also

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,11 @@
 [tox]
 envlist = py{31,32,33,34,35,36,37},pep8
 skip_missing_interpreters = true
-skipsdist = True
 
 [testenv]
 deps = pytest
        pyqt5
-commands = 
-	python setup.py develop
-	pytest
+commands = pytest
 
 [testenv:pep8]
 deps = flake8
