--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,11 @@ language: python
 python:
       - "3.5"
       - "3.6"
+
+matrix:
+  include:
+    - python: 3.6
+      env: TOXENV=pep8
+
 install: pip install tox-travis
 script: tox
